--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
 <head>
   <title>All About Morgan Kennedy</title>
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
-  <header class="container">
-    <div class="row">
-      <h2 class="col bg-info text-white">Morgan Kennedy</h2>
-      <ul class="col nav justify-content-end">
+  <header class="container mb-4">
+    <div class="row border">
+      <h5 class="col-md-3 bg-info text-white mb-0 p-2 text-center">Morgan Kennedy</h5>
+      <ul class="col-md-9 nav bg-white justify-content-end">
         <li class="nav-item"><a class="nav-link active text-dark" href="index.html">About</a></li>
         <li class="nav-item"><a class="nav-link active text-dark" href="portfolio.html">Portfolio</a></li>
         <li class="nav-item"><a class="nav-link active text-dark" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </header>
-  <div class="container">
-    <div class="row">
+  <div class="container bg-white border">
+    <div class="row p-4 border-bottom text-info">
       <h1 class="title">About Me</h1>
     </div>
-    <div class="row">
-        <div class="col">
+    <div class="row p-4 text-secondary">
+        <div class="col-md-4">
           <img src="assets/images/Sales-Icon-Web.png" class="img-fluid" alt="Image of a horse with a flaming mane">
         </div>
-        <div class="col">
+        <div class="col-md-8">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat sem id lectus ultrices rutrum. Cras dapibus bibendum metus quis mattis. Suspendisse pellentesque posuere felis volutpat pellentesque. Curabitur odio elit, ultrices in sem ac, dapibus mollis erat. Vestibulum malesuada dignissim velit. Mauris et mauris finibus, fringilla orci accumsan, aliquam augue. Sed in dui orci. Nam vitae dolor nibh. Etiam sit amet bibendum tortor. Morbi ornare tincidunt erat, sed porttitor quam condimentum nec. Sed egestas venenatis odio sed hendrerit.</p>
           <p>Nam laoreet condimentum sem, quis pharetra elit feugiat id. Cras consequat gravida ante in rhoncus. Nulla tristique hendrerit dui sit amet efficitur. Sed et varius mi. Aenean ut augue suscipit, malesuada neque sit amet, viverra massa. Integer rhoncus felis eget velit congue sagittis nec a massa. Phasellus odio ex, placerat a rutrum vel, ornare sed velit. Aenean sem tortor, molestie quis dapibus at, dignissim eu nulla. Mauris congue pellentesque elit sit amet dictum. Curabitur ultricies vehicula porttitor. Nulla laoreet ac velit quis vehicula. Mauris maximus risus suscipit lacus pretium, at suscipit mi fermentum. Integer accumsan arcu non massa luctus vestibulum ut eget ex. Nunc eu feugiat sapien. Nam at felis non neque tincidunt.</p>
         </div>
     </div>
     <div class="row">
-      <a href="http://violetce.github.io">Off to my GitHub!</a>
+      <a href="http://violetce.github.io" class="bg-info text-white p-3">Off to my GitHub!</a>
     </div>
   </div>
 
