--- a/portfolio.html
+++ b/portfolio.html
@@ -4,43 +4,54 @@
 <head>
   <title>All About Morgan Kennedy</title>
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
-  <header class="container">
-    <div class="row">
-      <h2 class="col bg-info text-white">Morgan Kennedy</h2>
-      <ul class="col nav justify-content-end">
+  <header class="container mb-4">
+    <div class="row border">
+      <h5 class="col-md-3 bg-info text-white mb-0 p-2 text-center">Morgan Kennedy</h5>
+      <ul class="col-md-9 nav bg-white justify-content-end">
         <li class="nav-item"><a class="nav-link active text-dark" href="index.html">About</a></li>
         <li class="nav-item"><a class="nav-link active text-dark" href="portfolio.html">Portfolio</a></li>
         <li class="nav-item"><a class="nav-link active text-dark" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </header>
-  <div class="container">
-    <div class="title">
+  <div class="container bg-white border">
+    <div class="row title p-4 border-bottom text-info">
       <h1>Portfolio</h1>
     </div>
-    <div class="portfolio-image">
-      <img src="assets/images/kamina_orig.jpg" class="profile-image" alt="Image of a horse">
-      <div class="image-text">Websites</div>
+    <div class="row p-4 text-white">
+      <div class="col-md-4">
+        <img src="assets/images/kamina_orig.jpg" class="img-fluid" alt="Image of a horse">
+        <div class="bg-info text-center">Websites</div>
+      </div>
+      <div class="col-md-4">
+          <img src="assets/images/kamina_orig.jpg" class="img-fluid" alt="Image of a horse">
+          <div class="bg-info text-center">Websites</div>
+      </div>
+      <div class="col-md-4">
+          <img src="assets/images/kamina_orig.jpg" class="img-fluid" alt="Image of a horse">
+          <div class="bg-info text-center">Websites</div>
+      </div>
     </div>
-    <div class="portfolio-image">
-        <img src="assets/images/kamina_orig.jpg" class="profile-image" alt="Image of a horse">
-        <div class="image-text">Websites</div>
-    </div>
-    <div class="portfolio-image">
-        <img src="assets/images/kamina_orig.jpg" class="profile-image" alt="Image of a horse">
-        <div class="image-text">Websites</div>
-    </div>
-    <div class="portfolio-image">
-        <img src="assets/images/kamina_orig.jpg" class="profile-image" alt="Image of a horse">
-        <div class="image-text">Websites</div>
-    </div>
-    <div class="portfolio-image">
-        <img src="assets/images/kamina_orig.jpg" class="profile-image" alt="Image of a horse">
-        <div class="image-text">Websites</div>
-    </div>
+    <div class="row p-4 text-white">
+      <div class="col-md-4">
+          <img src="assets/images/kamina_orig.jpg" class="img-fluid" alt="Image of a horse">
+          <div class="bg-info text-center">Websites</div>
+      </div>
+      <div class="col-md-4">
+          <img src="assets/images/kamina_orig.jpg" class="img-fluid" alt="Image of a horse">
+          <div class="bg-info text-center">Websites</div>
+      </div>
+      <div class="col-md-4">
+          <img src="assets/images/kamina_orig.jpg" class="img-fluid" alt="Image of a horse">
+          <div class="bg-info text-center">Websites</div>
+      </div>
+  </div>
 
   
 </div>
